syntax = "proto3";

package proto.user;

option go_package = "github.com/midaef/emmet-server/internal/api";

service User {
  rpc CreateUserByAccessToken(CreateUserByAccessTokenRequest) returns (CreateUserResponseByAccessToken);
  rpc DeleteUserByAccessToken(DeleteUserByAccessTokenRequest) returns (DeleteUserResponseByAccessToken);
  rpc UpdatePasswordByAccessToken(UpdatePasswordByAccessTokenRequest) returns (UpdatePasswordResponseByAccessToken);
}

message CreateUserByAccessTokenRequest {
  string AccessToken = 1;
  string login = 2;
  string password = 3;
  string role = 4;
}

message CreateUserResponseByAccessToken {
  string message = 1;
}

message DeleteUserByAccessTokenRequest {
  string AccessToken = 1;
  string login = 2;
}

message DeleteUserResponseByAccessToken {
  string message = 1;
}

message UpdatePasswordByAccessTokenRequest {
  string AccessToken = 1;
  string password = 2;
}

message UpdatePasswordResponseByAccessToken {
  string message = 1;
}